deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-rules
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /v1.0/invoke/frontend/method/$1
spec:
  rules:
    - http:
        paths:
          - path: /(.*)
            backend:
              serviceName: nginx-ingress-dapr
              servicePort: 80
